tests/ui/const-generics/generic_const_exprs/abstract-const-as-cast-2.stderr
error: unconstrained generic constant
  --> $DIR/abstract-const-as-cast-2.rs:6:25
   |
LL | struct Foo<const N: u8>([u8; N as usize])
   |                         ^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); N as usize]:`

error: unconstrained generic constant
  --> $DIR/abstract-const-as-cast-2.rs:12:26
   |
LL | struct Foo2<const N: u8>(Evaluatable::<{N as u128}>) where Evaluatable<{N as usize as u128 }>:;
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); {N as u128}]:`

error: unconstrained generic constant
  --> $DIR/abstract-const-as-cast-2.rs:16:25
   |
LL | struct Bar<const N: u8>([u8; (N + 2) as usize]) where [(); (N + 1) as usize]:;
   |                         ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: try adding a `where` bound using this expression: `where [(); (N + 2) as usize]:`

error: aborting due to 3 previous errors

